# fastapi_template

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py
scripts/postgres/: backup  restore
src/: __init__.py  config.py  constants.py  database.py  exceptions.py  main.py  models.py  schemas.py  utils.py
tests/: conftest.py  test_core.py  test_postgres_scripts.py
