[project]
name = "cc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.0",
    "curl-cffi>=0.15.0",
    "cryptography>=45.0.0",
    "email-validator>=2.3.0",
    "faker>=40.23.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "sentry-sdk>=2.5.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
