[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI 项目模板"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.128.0",
    "sentry-sdk>=2.5.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "pyright>=1.1.411",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
